Change all tickets API. Add tests folder

--- a/config/app.conf
+++ b/config/app.conf
@@ -1,4 +1,4 @@
 SUBDOMAIN_NAME = 
-GET_ALL_TICKETS_API = "https://" + SUBDOMAIN_NAME + "/api/v2/tickets"
+GET_ALL_TICKETS_API = "https://" + SUBDOMAIN_NAME + "/api/v2/incremental/tickets/cursor?start_time=0"
 GET_SINGLE_TICKET_API = "https://" + SUBDOMAIN_NAME + "/api/v2/search.json?query="
 OAUTH_ACCESS_TOKEN = 
